# utils-melinia

./: README.md
.github/workflows/: deploy-qr-code.yml
mail-coupons/: .gitignore  README.md  mail-coupon.sh  main.py  pyproject.toml  sample-data.csv  sample-mail.data.csv
mail-coupons/src/mail_coupons/: __init__.py  csv_reader.py  database.py  email_sender.py  login.py
mail-coupons/tests/: test_csv_reader.py  test_data_quality.py  test_database.py  test_email_sender.py  test_login.py  test_main.py
mailer/: .gitignore  README.md  package.json  test.csv
mailer/src/: types.ts
mailer/src/cli/: index.ts  parse.ts
mailer/src/config/: load.ts  validate.ts
mailer/src/csv/: parse.ts  validate.ts
mailer/src/mailer/: compose.ts  send.ts  transport.ts
mailer/src/templates/: loader.ts  render.ts
mailer/src/ui/: tasuku.ts
mailer/templates/: email.pug  hackathon.pug  outreach.pug  pitchpit.pug  remainder.pug
qr-code/: .gitignore  README.md  build.ts  index.html  package.json
qr-code/src/: app.js  app.tsx  client-entry.js  client-entry.tsx  client.js  client.tsx  config.ts  index.ts  index.tsx  shapes.ts
qr-code/src/components/: QRCode.tsx
vid_to_txt/: .gitignore  Cargo.toml
vid_to_txt/src/: lib.rs  main.rs
